Fix incorrect game rule translation keys

--- a/common/src/main/resources/assets/artifacts/lang/en_us.json
+++ b/common/src/main/resources/assets/artifacts/lang/en_us.json
@@ -97,14 +97,14 @@
   "gamerule.artifacts.bunnyHoppers.doCancelFallDamage": "Artifacts: Bunny Hoppers cancel fall damage",
   "gamerule.artifacts.bunnyHoppers.jumpBoostLevel": "Artifacts: Bunny Hoppers jump boost level",
   "gamerule.artifacts.charmOfSinking.enabled": "Artifacts: Charm of Sinking enabled",
-  "gamerule.artifacts.chorusTotem.consumedOnUse": "Artifacts: Chorus Totem consumed on use",
+  "gamerule.artifacts.chorusTotem.doConsumeOnUse": "Artifacts: Chorus Totem consumed on use",
   "gamerule.artifacts.chorusTotem.cooldown": "Artifacts: Chorus Totem cooldown",
   "gamerule.artifacts.chorusTotem.healthRestored": "Artifacts: Chorus Totem health restored",
   "gamerule.artifacts.chorusTotem.teleportationChance": "Artifacts: Chorus Totem teleportation chance",
   "gamerule.artifacts.cloudInABottle.enabled": "Artifacts: Cloud in a Bottle enabled",
   "gamerule.artifacts.cloudInABottle.sprintJumpHorizontalVelocity": "Artifacts: Cloud in a Bottle sprint jump horizontal velocity",
   "gamerule.artifacts.cloudInABottle.sprintJumpVerticalVelocity": "Artifacts: Cloud in a Bottle sprint jump vertical velocity",
-  "gamerule.artifacts.cowboy_hat.speedLevel": "Artifacts: Cowboy Hat speed level",
+  "gamerule.artifacts.cowboyHat.speedLevel": "Artifacts: Cowboy Hat speed level",
   "gamerule.artifacts.crossNecklace.bonusInvincibilityTicks": "Artifacts: Cross Necklace bonus invincibility ticks",
   "gamerule.artifacts.crossNecklace.cooldown": "Artifacts: Cross Necklace cooldown",
   "gamerule.artifacts.crystalHeart.healthBonus": "Artifacts: Crystal Heart health bonus",
@@ -154,8 +154,8 @@
   "gamerule.artifacts.snorkel.enabled": "Artifacts: Snorkel enabled",
   "gamerule.artifacts.snorkel.waterBreathingDuration": "Artifacts: Snorkel water breathing duration",
   "gamerule.artifacts.snorkel.isInfinite": "Artifacts: Snorkel is infinite",
-  "gamerule.artifacts.snowshoe.allowWalkingOnPowderSnow": "Artifacts: Snowshoes allow walking on Powder Snow",
-  "gamerule.artifacts.snowshoe.slipperinessReduction": "Artifacts: Snowshoe slipperiness reduction",
+  "gamerule.artifacts.snowshoes.allowWalkingOnPowderSnow": "Artifacts: Snowshoes allow walking on Powder Snow",
+  "gamerule.artifacts.snowshoes.slipperinessReduction": "Artifacts: Snowshoe slipperiness reduction",
   "gamerule.artifacts.steadfastSpikes.enabled": "Artifacts: Steadfast Spikes enabled",
   "gamerule.artifacts.steadfastSpikes.knockbackResistance": "Artifacts: Steadfast Spikes knockback resistance",
   "gamerule.artifacts.superstitiousHat.lootingLevelBonus": "Artifacts: Superstitious Hat looting level bonus",
