--- a/common/src/main/resources/assets/artifacts/lang/es_mx.json
+++ b/common/src/main/resources/assets/artifacts/lang/es_mx.json
@@ -97,14 +97,14 @@
   "gamerule.artifacts.bunnyHoppers.doCancelFallDamage": "Artefactos: Bunny Hoppers cancela daño por caída",
   "gamerule.artifacts.bunnyHoppers.jumpBoostLevel": "Artefactos: Nivel de impulso de salto de Bunny Hoppers",
   "gamerule.artifacts.charmOfSinking.enabled": "Artefactos: Amuleto de Hundimiento habilitado",
-  "gamerule.artifacts.chorusTotem.consumedOnUse": "Artefactos: Tótem de Coro consumido al usarse",
+  "gamerule.artifacts.chorusTotem.doConsumeOnUse": "Artefactos: Tótem de Coro consumido al usarse",
   "gamerule.artifacts.chorusTotem.cooldown": "Artefactos: Tiempo de enfriamiento de Tótem de Coro",
   "gamerule.artifacts.chorusTotem.healthRestored": "Artefactos: Vida restaurada por el Tótem de Coro",
   "gamerule.artifacts.chorusTotem.teleportationChance": "Artefactos: Probabilidad de teletransportación del Tótem de Coro",
   "gamerule.artifacts.cloudInABottle.enabled": "Artefactos: Nube en una Botella habilitada",
   "gamerule.artifacts.cloudInABottle.sprintJumpHorizontalVelocity":"Artefactos: Velocidad horizontal de salto en sprint de Nube en una Botella",
   "gamerule.artifacts.cloudInABottle.sprintJumpVerticalVelocity": "Artefactos: Velocidad vertical de salto en sprint de Nube en una Botella",
-  "gamerule.artifacts.cowboy_hat.speedLevel": "Artefactos: Nivel de velocidad del Sombrero de Vaquero",
+  "gamerule.artifacts.cowboyHat.speedLevel": "Artefactos: Nivel de velocidad del Sombrero de Vaquero",
   "gamerule.artifacts.crossNecklace.bonusInvincibilityTicks": "Artefactos: Ticks de invencibilidad adicionales del Collar de Cruz",
   "gamerule.artifacts.crossNecklace.cooldown": "Artefactos: Tiempo de enfriamiento del Collar de Cruz",
   "gamerule.artifacts.crystalHeart.healthBonus": "Artefactos: Bonificación de vida del Corazón de Cristal",
@@ -154,8 +154,8 @@
   "gamerule.artifacts.snorkel.enabled": "Artefactos: Snorkel habilitado",
   "gamerule.artifacts.snorkel.waterBreathingDuration": "Artefactos: Duración de respiración bajo agua del Snorkel",
   "gamerule.artifacts.snorkel.isInfinite": "Artefactos: El Snorkel es infinito",
-  "gamerule.artifacts.snowshoe.allowWalkingOnPowderSnow": "Artefactos: Las Raquetas permiten caminar sobre Nieve Polvo",
-  "gamerule.artifacts.snowshoe.slipperinessReduction": "Artefactos: Reducción de resbalamiento de las Raquetas",
+  "gamerule.artifacts.snowshoes.allowWalkingOnPowderSnow": "Artefactos: Las Raquetas permiten caminar sobre Nieve Polvo",
+  "gamerule.artifacts.snowshoes.slipperinessReduction": "Artefactos: Reducción de resbalamiento de las Raquetas",
   "gamerule.artifacts.steadfastSpikes.enabled": "Artefactos: Púas Firmes habilitadas",
   "gamerule.artifacts.steadfastSpikes.knockbackResistance": "Artefactos: Resistencia al retroceso de las Púas Firmes",
   "gamerule.artifacts.superstitiousHat.lootingLevelBonus": "Artefactos: Bonificación de nivel de saqueo del Sombrero Supersticioso",
