--- a/common/src/main/resources/assets/artifacts/lang/ko_kr.json
+++ b/common/src/main/resources/assets/artifacts/lang/ko_kr.json
@@ -51,7 +51,7 @@
   "artifacts.tooltip.item.kitty_slippers": "크리퍼들이 착용자를 기피합니다",
   "artifacts.tooltip.item.lucky_scarf.multiple_levels": "채굴한 블록에 대해 %s 만큼의 행운 레벨을 적용합니다",
   "artifacts.tooltip.item.lucky_scarf.single_level": "채굴한 블록에 대해 추가 행운 레벨을 적용합니다",
-  "artifacts.tooltip.item.night_vision_goggles": "어둠 속을 볼 수 있습니다",
+  "artifacts.tooltip.item.night_vision_goggles.full": "어둠 속을 볼 수 있습니다",
   "artifacts.tooltip.item.night_vision_goggles.partial": "약간 어두운 곳 볼 수 있습니다",
   "artifacts.tooltip.item.obsidian_skull": "화염 피해를 입을 때 잠시 화염 면역을 가집니다",
   "artifacts.tooltip.item.onion_ring": "음식을 먹은 후 일시적으로 채굴 속도가 증가합니다",
@@ -97,14 +97,14 @@
   "gamerule.artifacts.bunnyHoppers.doCancelFallDamage": "아티팩트: 토끼 슬리퍼 추락 대미지 비활성화",
   "gamerule.artifacts.bunnyHoppers.jumpBoostLevel": "아티팩트: 토끼 슬리퍼 점프 부스트 레벨",
   "gamerule.artifacts.charmOfSinking.enabled": "아티팩트: 침몰의 부적 활성화",
-  "gamerule.artifacts.chorusTotem.consumedOnUse": "아티팩트: 후렴과 토템 사용 시 소비",
+  "gamerule.artifacts.chorusTotem.doConsumeOnUse": "아티팩트: 후렴과 토템 사용 시 소비",
   "gamerule.artifacts.chorusTotem.cooldown": "아티팩트: 후렴과 토템 재사용 대기시간",
   "gamerule.artifacts.chorusTotem.healthRestored": "아티팩트: 후렴과 토템 회복되는 체력",
   "gamerule.artifacts.chorusTotem.teleportationChance": "아티팩트: 후렴과 토템 순간이동 확률",
   "gamerule.artifacts.cloudInABottle.enabled": "아티팩트: 병 속의 구름 활성화",
   "gamerule.artifacts.cloudInABottle.sprintJumpHorizontalVelocity": "아티팩트: 병 속의 구름 스프린트 점프 수평 속도",
   "gamerule.artifacts.cloudInABottle.sprintJumpVerticalVelocity": "아티팩트: 병 속의 구름 스프린트 점프 수직 속도",
-  "gamerule.artifacts.cowboy_hat.speedLevel": "아티팩트: 카우보이 모자 속도 레벨",
+  "gamerule.artifacts.cowboyHat.speedLevel": "아티팩트: 카우보이 모자 속도 레벨",
   "gamerule.artifacts.crossNecklace.bonusInvincibilityTicks": "아티팩트: 십자목걸이 추가 무적 틱",
   "gamerule.artifacts.crossNecklace.cooldown": "아티팩트: 십자목걸이 재사용 대기시간",
   "gamerule.artifacts.crystalHeart.healthBonus": "아티팩트: 크리스털 하트 체력 보너스",
@@ -154,8 +154,8 @@
   "gamerule.artifacts.snorkel.enabled": "아티팩트: 스노클 활성화",
   "gamerule.artifacts.snorkel.waterBreathingDuration": "아티팩트: 스노클 수중 호흡 지속 시간",
   "gamerule.artifacts.snorkel.isInfinite": "아티팩트: 스노클 무한 여부",
-  "gamerule.artifacts.snowshoe.allowWalkingOnPowderSnow": "아티팩트: 눈 신발 가루눈 위 걷기 허용",
-  "gamerule.artifacts.snowshoe.slipperinessReduction": "아티팩트: 눈 신발 미끄러움 감소",
+  "gamerule.artifacts.snowshoes.allowWalkingOnPowderSnow": "아티팩트: 눈 신발 가루눈 위 걷기 허용",
+  "gamerule.artifacts.snowshoes.slipperinessReduction": "아티팩트: 눈 신발 미끄러움 감소",
   "gamerule.artifacts.steadfastSpikes.enabled": "아티팩트: 가시달린 장화 활성화",
   "gamerule.artifacts.steadfastSpikes.knockbackResistance": "아티팩트: 가시달린 장화 넉백 저항",
   "gamerule.artifacts.superstitiousHat.lootingLevelBonus": "아티팩트: 요정의 모자 전리품 레벨 보너스",
