--- a/common/src/main/resources/assets/artifacts/lang/ru_ru.json
+++ b/common/src/main/resources/assets/artifacts/lang/ru_ru.json
@@ -97,14 +97,14 @@
   "gamerule.artifacts.bunnyHoppers.doCancelFallDamage": "Артефакты: (Зайцы-прыгуны) Аннулирование урона от падения",
   "gamerule.artifacts.bunnyHoppers.jumpBoostLevel": "Артефакты: (Зайцы-прыгуны) Увеличение уровня прыжка",
   "gamerule.artifacts.charmOfSinking.enabled": "Артефакты: Амулет погружения включен",
-  "gamerule.artifacts.chorusTotem.consumedOnUse": "Артефакты: (Тотем хоруса) Расходуется при использовании",
+  "gamerule.artifacts.chorusTotem.doConsumeOnUse": "Артефакты: (Тотем хоруса) Расходуется при использовании",
   "gamerule.artifacts.chorusTotem.cooldown": "Артефакты: (Тотем хоруса) Время восстановления",
   "gamerule.artifacts.chorusTotem.healthRestored": "Артефакты: (Тотем хоруса) Восстановление здоровья",
   "gamerule.artifacts.chorusTotem.teleportationChance": "Артефакты: (Тотем хоруса) Шанс телепортации",
   "gamerule.artifacts.cloudInABottle.enabled": "Артефакты: Облако в бутылке включено",
   "gamerule.artifacts.cloudInABottle.sprintJumpHorizontalVelocity": "Артефакты: (Облако в бутылке) Горизонт. скорость прыжка при беге",
   "gamerule.artifacts.cloudInABottle.sprintJumpVerticalVelocity": "Артефакты: (Облако в бутылке) Вертикал. скорость прыжка при беге",
-  "gamerule.artifacts.cowboy_hat.speedLevel": "Артефакты: (Ковбойская шляпа) Увеличение уровня скорости скакуна",
+  "gamerule.artifacts.cowboyHat.speedLevel": "Артефакты: (Ковбойская шляпа) Увеличение уровня скорости скакуна",
   "gamerule.artifacts.crossNecklace.bonusInvincibilityTicks": "Артефакты: (Нательный крестик) Бонус к тикам неуязвимости",
   "gamerule.artifacts.crossNecklace.cooldown": "Артефакты: (Нательный крестик) Время восстановления",
   "gamerule.artifacts.crystalHeart.healthBonus": "Артефакты: (Хрустальное сердце) Бонус к здоровью",
@@ -154,8 +154,8 @@
   "gamerule.artifacts.snorkel.enabled": "Артефакты: Дыхательная трубка включена",
   "gamerule.artifacts.snorkel.waterBreathingDuration": "Артефакты: (Дыхательная трубка) Продолжительность дыхания",
   "gamerule.artifacts.snorkel.isInfinite": "Артефакты: (Дыхательная трубка) Бесконечное дыхание",
-  "gamerule.artifacts.snowshoe.allowWalkingOnPowderSnow": "Артефакты: (Снегоступы) Возможность ходить по рыхлому снегу",
-  "gamerule.artifacts.snowshoe.slipperinessReduction": "Artifacts: (Снегоступы) Снижение скользкости",
+  "gamerule.artifacts.snowshoes.allowWalkingOnPowderSnow": "Артефакты: (Снегоступы) Возможность ходить по рыхлому снегу",
+  "gamerule.artifacts.snowshoes.slipperinessReduction": "Artifacts: (Снегоступы) Снижение скользкости",
   "gamerule.artifacts.steadfastSpikes.enabled": "Артефакты: Прочные шипы включены",
   "gamerule.artifacts.steadfastSpikes.knockbackResistance": "Артефакты: (Прочные шипы) Сопротивление отбрасыванию",
   "gamerule.artifacts.superstitiousHat.lootingLevelBonus": "Артефакты: (Суеверная шляпа) Бонус к уровню мародёрству",
