--- a/common/src/main/resources/assets/artifacts/lang/zh_cn.json
+++ b/common/src/main/resources/assets/artifacts/lang/zh_cn.json
@@ -97,14 +97,14 @@
   "gamerule.artifacts.bunnyHoppers.doCancelFallDamage": "奇异饰品：跃兔鞋能否免疫摔落伤害",
   "gamerule.artifacts.bunnyHoppers.jumpBoostLevel": "奇异饰品：跃兔鞋提供的跳跃提升等级",
   "gamerule.artifacts.charmOfSinking.enabled": "奇异饰品：启用下沉护符",
-  "gamerule.artifacts.chorusTotem.consumedOnUse": "奇异饰品：紫颂图腾是否在使用后被消耗",
+  "gamerule.artifacts.chorusTotem.doConsumeOnUse": "奇异饰品：紫颂图腾是否在使用后被消耗",
   "gamerule.artifacts.chorusTotem.cooldown": "奇异饰品：紫颂图腾的冷却时间",
   "gamerule.artifacts.chorusTotem.healthRestored": "奇异饰品：紫颂图腾恢复的生命值",
   "gamerule.artifacts.chorusTotem.teleportationChance": "奇异饰品：紫颂图腾的传送概率",
   "gamerule.artifacts.cloudInABottle.enabled": "奇异饰品：启用云朵瓶",
   "gamerule.artifacts.cloudInABottle.sprintJumpHorizontalVelocity": "奇异饰品：云朵瓶提供的疾跑起跳的水平速度",
   "gamerule.artifacts.cloudInABottle.sprintJumpVerticalVelocity": "奇异饰品：云朵瓶提供的疾跑起跳的垂直速度",
-  "gamerule.artifacts.cowboy_hat.speedLevel": "奇异饰品：牛仔帽提供的速度等级",
+  "gamerule.artifacts.cowboyHat.speedLevel": "奇异饰品：牛仔帽提供的速度等级",
   "gamerule.artifacts.crossNecklace.bonusInvincibilityTicks": "奇异饰品：十字项链延长的无敌时间（刻）",
   "gamerule.artifacts.crossNecklace.cooldown": "奇异饰品：十字项链的冷却时间",
   "gamerule.artifacts.crystalHeart.healthBonus": "奇异饰品： 生命水晶的最大生命值提升值",
@@ -154,8 +154,8 @@
   "gamerule.artifacts.snorkel.enabled": "奇异饰品：启用通气管",
   "gamerule.artifacts.snorkel.waterBreathingDuration": "奇异饰品：通气管提供的水下呼吸持续时间",
   "gamerule.artifacts.snorkel.isInfinite": "奇异饰品：通气管能否无限使用",
-  "gamerule.artifacts.snowshoe.allowWalkingOnPowderSnow": "奇异饰品：雪地鞋是否允许玩家在细雪上行走",
-  "gamerule.artifacts.snowshoe.slipperinessReduction": "奇异饰品：雪地鞋降低的光滑度",
+  "gamerule.artifacts.snowshoes.allowWalkingOnPowderSnow": "奇异饰品：雪地鞋是否允许玩家在细雪上行走",
+  "gamerule.artifacts.snowshoes.slipperinessReduction": "奇异饰品：雪地鞋降低的光滑度",
   "gamerule.artifacts.steadfastSpikes.enabled": "奇异饰品：启用牢固鞋钉",
   "gamerule.artifacts.steadfastSpikes.knockbackResistance": "奇异饰品：牢固鞋钉提供的击退抗性",
   "gamerule.artifacts.superstitiousHat.lootingLevelBonus": "奇异饰品：迷信之帽提供的额外抢夺等级",
