Replace damage absorption attributes with absorb_attack_damage ability, add absorptionChance config option

--- a/common/src/main/resources/assets/artifacts/lang/ru_ru.json
+++ b/common/src/main/resources/assets/artifacts/lang/ru_ru.json
@@ -227,12 +227,12 @@
   "artifacts.tooltip.ability.apply_mob_effect_after_damage.fire_resistance": "При ранении огнём, владелец становится на какое-то время неуязвим к урону от огня",
   "artifacts.tooltip.ability.apply_mob_effect_after_damage.speed": "Увеличивает скорость движения носителя после получения урона",
   "artifacts.tooltip.ability.apply_mob_effect_after_eating.haste": "Даёт временное повышение скорости копания после поедания еды",
+  "artifacts.tooltip.ability.attacks_absorb_damage.constant": "Заставляет ближние атаки владельца поглощать здоровье",
   "artifacts.tooltip.ability.attacks_inflict_mob_effect.wither.chance": "Ближние атаки могут вызвать эффект иссушения",
   "artifacts.tooltip.ability.attacks_inflict_mob_effect.wither.constant": "Заставляет ближние атаки владельца вызывать эффект иссушения",
   "artifacts.tooltip.ability.attract_items": "Притягивает ближайшие предметы",
   "artifacts.tooltip.ability.attribute_modifier.generic.attack_burning_duration": "Заставляет ближние атаки владельца наносить урон огнём",
   "artifacts.tooltip.ability.attribute_modifier.generic.attack_damage": "Увеличивает урон, наносимый владельцем",
-  "artifacts.tooltip.ability.attribute_modifier.generic.attack_damage_absorption": "Заставляет ближние атаки владельца поглощать здоровье",
   "artifacts.tooltip.ability.attribute_modifier.generic.attack_knockback": "Увеличивает отбрасывание, наносимое по владельцу",
   "artifacts.tooltip.ability.attribute_modifier.generic.attack_speed": "Увеличивают скорость атаки владельца",
   "artifacts.tooltip.ability.attribute_modifier.generic.drinking_speed": "Снижает время, которое требуется на выпивание предметов",
