--- a/common/src/main/resources/assets/artifacts/lang/es_es.json
+++ b/common/src/main/resources/assets/artifacts/lang/es_es.json
@@ -1,7 +1,9 @@
 {
+  "artifacts.advancements.adventurous_eater.description": "Come un artefacto",
+  "artifacts.advancements.adventurous_eater.title": "Comedor Aventurero",
   "artifacts.advancements.amateur_archaeologist.description": "Encuentra un artefacto",
-  "artifacts.advancements.amateur_archaeologist.title": "Arqueólogo Amateur",
-  "artifacts.advancements.chest_slayer.description": "Mata a un Mimic",
+  "artifacts.advancements.amateur_archaeologist.title": "Arqueólogo Aficionado",
+  "artifacts.advancements.chest_slayer.description": "Mata un Mímic",
   "artifacts.advancements.chest_slayer.title": "Asesino de Cofres",
   "artifacts.creative_tab": "Artefactos",
   "artifacts.key.helium_flamingo.activate": "Activar el Flamenco de Helio",
@@ -12,15 +14,25 @@
   "artifacts.subtitles.entity.mimic.death": "El mimic murió",
   "artifacts.subtitles.entity.mimic.hurt": "El mimic dañado",
   "artifacts.subtitles.entity.mimic.open": "El mimic saltó",
-  "artifacts.subtitles.item.whoopee_cushion.fart": "Pedo.",
+  "artifacts.subtitles.item.whoopee_cushion.fart": "Pedo",
   "artifacts.tooltip.cosmetic": "Cosmético",
-  "artifacts.tooltip.item.antidote_vessel": "Disminuye de gran forma la duración de bufos negativos.",
-  "artifacts.tooltip.item.aqua_dashers": "Permite al portador correr sobre fluidos.",
+  "artifacts.tooltip.cosmetics_disabled": "Cosméticos desactivados (clic derecho para alternar)",
+  "artifacts.tooltip.cosmetics_enabled": "Cosméticos activados (clic derecho para alternar)",
+  "artifacts.tooltip.item.anglers_hat.luck_of_the_sea.multiple_levels": "Aplica %s niveles extra de Suerte del Mar al pescar",
+  "artifacts.tooltip.item.anglers_hat.luck_of_the_sea.single_level": "Aplica un nivel extra de Suerte del Mar al pescar",
+  "artifacts.tooltip.item.anglers_hat.lure.multiple_levels": "Aplica %s niveles extra de Señuelo al pescar",
+  "artifacts.tooltip.item.anglers_hat.lure.single_level": "Aplica un nivel extra de Señuelo al pescar",
+  "artifacts.tooltip.item.antidote_vessel": "Reduce significativamente la duración de los efectos negativos",
+  "artifacts.tooltip.item.aqua_dashers": "Permite al portador correr sobre fluidos",
   "artifacts.tooltip.item.bunny_hoppers.fall_damage": "No tienes daño por caída",
   "artifacts.tooltip.item.bunny_hoppers.jump_height": "Saltas más alto cuando te lo pones",
   "artifacts.tooltip.item.charm_of_sinking": "Podrás moverte libremente por el agua.",
-  "artifacts.tooltip.item.cloud_in_a_bottle": "Podrás dar doble saltos.",
-  "artifacts.tooltip.item.cross_necklace": "Aumenta el tiempo de invencibilidad al recibir daño.",
+  "artifacts.tooltip.item.chorus_totem.chance": "Un golpe fatal tiene una probabilidad de teletransportarte a otro lugar",
+  "artifacts.tooltip.item.chorus_totem.constant": "Un golpe fatal te teletransporta a otro lugar",
+  "artifacts.tooltip.item.chorus_totem.not_consumed": "No se consume al usarlo",
+  "artifacts.tooltip.item.cloud_in_a_bottle": "Podrás dar doble saltos",
+  "artifacts.tooltip.item.cowboy_hat": "Aumenta la velocidad de las monturas",
+  "artifacts.tooltip.item.cross_necklace": "Aumenta el tiempo de invencibilidad al recibir daño",
   "artifacts.tooltip.item.crystal_heart": "Te da más corazones de vida",
   "artifacts.tooltip.item.digging_claws.mining_level": "Incrementa el nivel de minado base a %s",
   "artifacts.tooltip.item.digging_claws.mining_speed": "Incrementa la velocidad de minado",
@@ -28,48 +40,55 @@
   "artifacts.tooltip.item.drinking_hat.eating": "Disminuye el tiempo de comer",
   "artifacts.tooltip.item.drinking_hat.special": "'¡Oye! ¡Soy el número 1 y dejo que la gravedad me haga beber!'",
   "artifacts.tooltip.item.everlasting_food": "No se gasta cuando lo comes.",
-  "artifacts.tooltip.item.feral_claws": "Disminuye el tiempo de espera cuando pegas.",
-  "artifacts.tooltip.item.fire_gauntlet": "Le metes fuego a los mobs en ataque cuerpo a cuerpo.",
-  "artifacts.tooltip.item.flame_pendant.fire_resistance": "Te da resistencia al fuego cuando prendes fuego al que atacas",
-  "artifacts.tooltip.item.flame_pendant.strike_chance": "Cuando un mob te ataca, es probable que se prenda fuego.",
-  "artifacts.tooltip.item.flippers": "Aumenta la agilidad cuando buceas.",
-  "artifacts.tooltip.item.golden_hook": "Los mobs te sueltan más experiencia.",
-  "artifacts.tooltip.item.helium_flamingo.keymapping": "Presiona %s en el aire para nadar.",
-  "artifacts.tooltip.item.helium_flamingo.swimming": "Permite al usuario nadar en el aire por un periodo limitado de tiempo.",
-  "artifacts.tooltip.item.kitty_slippers": "Los Creepers huirán de ti.",
+  "artifacts.tooltip.item.feral_claws": "Disminuye el tiempo de espera cuando pegas",
+  "artifacts.tooltip.item.fire_gauntlet": "Le metes fuego a los mobs en ataque cuerpo a cuerpo",
+  "artifacts.tooltip.item.flame_pendant.fire_resistance": "Cuando lo llevas puesto, te vuelves inmune al fuego por unos segundos",
+  "artifacts.tooltip.item.flame_pendant.strike_chance": "Cuando un mob te ataca, es probable que se prenda fuego",
+  "artifacts.tooltip.item.flippers": "Aumenta la agilidad en el agua",
+  "artifacts.tooltip.item.golden_hook": "Los mobs te sueltan más experiencia",
+  "artifacts.tooltip.item.helium_flamingo.keymapping": "Presiona %s en el aire para nadar",
+  "artifacts.tooltip.item.helium_flamingo.swimming": "Permite al usuario nadar en el aire por un periodo limitado de tiempo",
+  "artifacts.tooltip.item.kitty_slippers": "Los Creepers huirán de ti",
   "artifacts.tooltip.item.lucky_scarf.multiple_levels": "Aplica un nivel %s extra de fortuna a los bloques minados",
   "artifacts.tooltip.item.lucky_scarf.single_level": "Aplica un nivel extra de fortuna a los bloques que se minan.",
-  "artifacts.tooltip.item.night_vision_goggles.full": "Podrás ver en la oscuridad.",
+  "artifacts.tooltip.item.night_vision_goggles.full": "Podrás ver en la oscuridad",
+  "artifacts.tooltip.item.night_vision_goggles.partial": "Podrás ver ligeramente en la oscuridad",
   "artifacts.tooltip.item.obsidian_skull": "Cuando lo llevas puesto, te vuelves inmune al fuego por unos segundos.",
-  "artifacts.tooltip.item.panic_necklace": "Cuando un mob te ataca, tu velocidad de movimiento aumenta.",
-  "artifacts.tooltip.item.pocket_piston": "Empujas más al atacar.",
-  "artifacts.tooltip.item.power_glove": "Aumenta el daño que haces al atacar.",
+  "artifacts.tooltip.item.onion_ring": "Otorga un aumento temporal a la velocidad de minería después de comer",
+  "artifacts.tooltip.item.panic_necklace": "Cuando un mob te ataca, tu velocidad de movimiento aumenta",
+  "artifacts.tooltip.item.pickaxe_heater": "Funde automáticamente los minerales minados",
+  "artifacts.tooltip.item.pocket_piston": "Empujas más al atacar",
+  "artifacts.tooltip.item.power_glove": "Aumenta el daño que haces al atacar",
+  "artifacts.tooltip.item.rooted_boots": "Repone lentamente el hambre mientras se camina sobre la hierba",
   "artifacts.tooltip.item.running_shoes.movement_speed": "Aumenta la velocidad de movimiento del usuario al esprintar",
   "artifacts.tooltip.item.running_shoes.step_height": "Aumenta la altura de paso del usuario al esprintar",
-  "artifacts.tooltip.item.scarf_of_invisibility": "Te vuelves invisible.",
+  "artifacts.tooltip.item.scarf_of_invisibility": "Te vuelves invisible",
   "artifacts.tooltip.item.shock_pendant.lightning_damage": "Te protege contra los rayos",
-  "artifacts.tooltip.item.shock_pendant.strike_chance": "Cuando un mob te ataca, es probable que le caiga un rayo.",
-  "artifacts.tooltip.item.snorkel.infinite": "Puedes respirar bajo el agua.",
-  "artifacts.tooltip.item.snorkel.limited": "Puedes respirar bajo el agua.",
-  "artifacts.tooltip.item.steadfast_spikes": "Te protege un poco contra el empuje.",
+  "artifacts.tooltip.item.shock_pendant.strike_chance": "Tiene una probabilidad de golpear a los atacantes con un rayo",
+  "artifacts.tooltip.item.snorkel.infinite": "Puedes respirar bajo el agua siempre",
+  "artifacts.tooltip.item.snorkel.limited": "Puedes respirar bajo el agua por un tiempo",
+  "artifacts.tooltip.item.snowshoes.powder_snow": "Permite al portador caminar sobre la nieve en polvo",
+  "artifacts.tooltip.item.snowshoes.slipperiness": "Hace que el hielo sea menos resbaladizo para caminar",
+  "artifacts.tooltip.item.steadfast_spikes": "Te protege un poco contra el empuje",
   "artifacts.tooltip.item.superstitious_hat.multiple_levels": "Aplica %s niveles extra de saqueo a las entidades asesinadas",
   "artifacts.tooltip.item.superstitious_hat.single_level": "Podrás recibir más cosas de los mobs que mates.",
-  "artifacts.tooltip.item.thorn_pendant": "Cuando un mob te ataca, es probable que se haga daño.",
+  "artifacts.tooltip.item.thorn_pendant": "Tiene una probabilidad de dañar a los atacantes",
   "artifacts.tooltip.item.umbrella.glider": "Caes lentamente cuando lo llevas",
   "artifacts.tooltip.item.umbrella.shield": "Puedes usarlo como escudo",
-  "artifacts.tooltip.item.universal_attractor": "Atrae objetos cercanos.",
-  "artifacts.tooltip.item.vampiric_glove.constant": "Cuando ataques, absorbes la vida del mob.",
-  "artifacts.tooltip.item.villager_hat": "Baja el precio de comercios con aldeanos",
+  "artifacts.tooltip.item.universal_attractor": "Atrae objetos cercanos",
+  "artifacts.tooltip.item.vampiric_glove.chance": "Los ataques cuerpo a cuerpo del portador tienen una probabilidad de absorber vida",
+  "artifacts.tooltip.item.vampiric_glove.constant": "Hace que los ataques cuerpo a cuerpo del portador absorban vida",
+  "artifacts.tooltip.item.villager_hat": "Reduce los precios del comercio con aldeanos",
   "artifacts.tooltip.item.whoopee_cushion": "Te tiras pedos",
-  "artifacts.tooltip.toggle_keymapping": "Dale a %s para activar/desactivar",
+  "artifacts.tooltip.toggle_keymapping": "Presiona %s para alternar",
   "artifacts.tooltip.tool_tier.1": "madera",
   "artifacts.tooltip.tool_tier.2": "piedra",
   "artifacts.tooltip.tool_tier.3": "hierro",
   "artifacts.tooltip.tool_tier.4": "diamante",
   "artifacts.tooltip.tool_tier.5": "netherita",
   "curios.identifier.feet": "Pies",
-  "curios.modifiers.feet": "Cuando se usa en los pies:",
-  "entity.artifacts.mimic": "Mimic",
+  "curios.modifiers.feet": "Cuando está en los pies:",
+  "entity.artifacts.mimic": "Mímic",
   "gamerule.artifacts.antidoteVessel.enabled": "Artifacts: Frasco del Antídoto activado",
   "gamerule.artifacts.antidoteVessel.maxEffectDuration": "Artifacts: Duración de efectos negativos del Frasco del Antídoto",
   "gamerule.artifacts.aquaDashers.enabled": "Artifacts: Botas de Impulso Acuático activado",
@@ -127,11 +146,14 @@
   "gamerule.artifacts.vampiricGlove.maxHealingPerHit": "Artifacts: Máxima regeneración por golpe del Guante Vampírico",
   "gamerule.artifacts.villagerHat.reputationBonus": "Artifacts: Bonus de reputación del Sombrero de Paja",
   "gamerule.artifacts.whoopeeCushion.fartChance": "Artifacts: Probabilidad de tirarse un pedo con el Cojín de Pedos",
+  "item.artifacts.anglers_hat": "Sombrero de Pescador",
   "item.artifacts.antidote_vessel": "Frasco del Antídoto",
-  "item.artifacts.aqua_dashers": "Botas de Impulso Acuático",
-  "item.artifacts.bunny_hoppers": "Zapatillas de Conejito",
+  "item.artifacts.aqua_dashers": "Botas de Agua",
+  "item.artifacts.bunny_hoppers": "Botas de Conejo",
   "item.artifacts.charm_of_sinking": "Collar Acuático",
+  "item.artifacts.chorus_totem": "Tótem de Coral",
   "item.artifacts.cloud_in_a_bottle": "Nube Enbotellada",
+  "item.artifacts.cowboy_hat": "Sombrero del Vaquero",
   "item.artifacts.cross_necklace": "Collar de Cruz",
   "item.artifacts.crystal_heart": "Corazón de Cristal",
   "item.artifacts.digging_claws": "Garras de Excavación",
@@ -145,18 +167,22 @@
   "item.artifacts.helium_flamingo": "Flamenco de Helio",
   "item.artifacts.kitty_slippers": "Zapatillas de Gatito",
   "item.artifacts.lucky_scarf": "Bufanda de la Suerte",
-  "item.artifacts.mimic_spawn_egg": "Generar Mimic",
+  "item.artifacts.mimic_spawn_egg": "Huevo de Spawn de Mímico",
   "item.artifacts.night_vision_goggles": "Gafas de Visión Nocturna",
   "item.artifacts.novelty_drinking_hat": "Gorro para Beber de Tela",
   "item.artifacts.obsidian_skull": "Calavera de Obsidiana",
-  "item.artifacts.panic_necklace": "Collar del Pánico",
+  "item.artifacts.onion_ring": "Anillo de Cebolla",
+  "item.artifacts.panic_necklace": "Collar de Pánico",
+  "item.artifacts.pickaxe_heater": "Calentador de Picos",
   "item.artifacts.plastic_drinking_hat": "Gorro para Beber de Plástico",
   "item.artifacts.pocket_piston": "Pistón de Bolsillo",
   "item.artifacts.power_glove": "Guante del Poder",
+  "item.artifacts.rooted_boots": "Botas con Raíces",
   "item.artifacts.running_shoes": "Zapatos de Deporte",
   "item.artifacts.scarf_of_invisibility": "Bufanda de la Invisibilidad",
   "item.artifacts.shock_pendant": "Collar de Rayos",
   "item.artifacts.snorkel": "Gafas de Buceo",
+  "item.artifacts.snowshoes": "Botas de Nieve",
   "item.artifacts.steadfast_spikes": "Garras Antiempuje",
   "item.artifacts.superstitious_hat": "Sombrero de la Fortuna",
   "item.artifacts.thorn_pendant": "Collar de Espinas",
@@ -167,9 +193,6 @@
   "item.artifacts.whoopee_cushion": "Cojín de Pedos",
   "text.autoconfig.artifacts.category.client": "Cliente",
   "text.autoconfig.artifacts.category.common": "Común",
-  "text.autoconfig.artifacts.option.common.modifyHurtSounds": "Modificar los sonidos de daño en el jugador.",
-  "text.autoconfig.artifacts.option.common.modifyHurtSounds.@Tooltip[0]": "Si las Zapatillas de Gatito y de Conejito",
-  "text.autoconfig.artifacts.option.common.modifyHurtSounds.@Tooltip[1]": "Cambia el sonido de los pedos",
   "text.autoconfig.artifacts.option.client.showFirstPersonGloves": "Mostrar los guantes en primera persona.",
   "text.autoconfig.artifacts.option.client.showFirstPersonGloves.@Tooltip": "Si los guantes se muestran en primera persona",
   "text.autoconfig.artifacts.option.client.showTooltips": "Mostrar las descripciones.",
@@ -193,5 +216,8 @@
   "text.autoconfig.artifacts.option.common.campsite.minY.@Tooltip": "La altura mínima a la que pueden generarse los campings",
   "text.autoconfig.artifacts.option.common.campsite.useModdedChests": "Usar cofres de otros mods.",
   "text.autoconfig.artifacts.option.common.campsite.useModdedChests.@Tooltip": "Si cofres de otros mods se pueden generar en los campings",
+  "text.autoconfig.artifacts.option.common.modifyHurtSounds": "Modificar los sonidos de daño en el jugador.",
+  "text.autoconfig.artifacts.option.common.modifyHurtSounds.@Tooltip[0]": "Si las Zapatillas de Gatito y de Conejito",
+  "text.autoconfig.artifacts.option.common.modifyHurtSounds.@Tooltip[1]": "Cambia el sonido de los pedos",
   "text.autoconfig.artifacts.title": "Configuración de Artifacts"
 }
